# greeter-service

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/: auto-label.yml  dependabot.yml  labels.yml  mergify.yml
.github/workflows/: app-build-and-push.yaml  app-test.yaml  pr-auto-label.yaml  repo-labels.yaml
assets/: README.md  welcome.sh
tests/: README.md  conftest.py  test_greeter_service.py
