[tool.poetry]
name = "greeter-service"
version = "0.0.0"
description = "PoC that returns a greeting like 'Hello' for 'Hello world'"
authors = ["Vlad Ionescu <Vlaaaaaaad@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
pytest-flask = "^1.1.0"
gunicorn = "^21.2.0"
Flask-Cors = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
wemake-python-styleguide = "^0.17.0"
